--- a/styles/style.css
+++ b/styles/style.css
@@ -129,6 +129,11 @@ p {
     padding: 0;
   }
 
+  .content h1 {
+    font-size: 44px;
+    line-height: 56px;
+  }
+
   .project-description {
     padding: 0;
     text-align: center;
