--- a/styles/style.css
+++ b/styles/style.css
@@ -63,6 +63,10 @@ p {
   padding: 60px 20px;
 }
 
+.content h1.introduction {
+  font-size: 55px;
+}
+
 .content h1 {
   font-size: 64px;
   line-height: 80px;
