--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ h1 {
 }
 
 h2 {
-  font-size: 64px;
+  font-size: 55px;
 }
 
 h3 {
@@ -43,7 +43,10 @@ p {
 }
 
 .hero {
+  /*
+  background: var(--secondary-color);*/
   background: var(--secondary-color);
+  background: linear-gradient(90deg, var(--secondary-color) 76%, #6c63ff 76%);
   text-align: center;
   padding: 80px 20px;
 }
@@ -100,6 +103,8 @@ p {
 
 .portrait {
   border-radius: 10px;
+  max-width: 304px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.3);
 }
 
 .btn-branding {
@@ -143,6 +148,15 @@ p {
 
 .project-description {
   padding: 120px 60px;
+}
+
+.skill {
+  display: inline-block;
+  background: #6c63ff;
+  color: white;
+  padding: 10px 20px;
+  margin-right: 10px;
+  border-radius: 4px;
 }
 
 .logo {
