--- a/styles/style.css
+++ b/styles/style.css
@@ -261,6 +261,27 @@ footer .social-links a:hover {
     font-size: 26px;
   }
 
+  .hero {
+    background: var(--secondary-color);
+    background: linear-gradient(
+      180deg,
+      var(--secondary-color) 46%,
+      #6c63ff 46%
+    );
+  }
+
+  .hero h1 {
+    font-size: 44px;
+    line-height: 1.5;
+  }
+  .hero h2 {
+    font-size: 26px;
+  }
+
+  .portrait {
+    margin: 60px auto 0;
+  }
+
   .content {
     text-align: center;
     padding: 0;
@@ -274,5 +295,9 @@ footer .social-links a:hover {
   .project-description {
     padding: 0;
     text-align: center;
+  }
+
+  .skill {
+    margin-bottom: 15px;
   }
 }
