--- a/styles/style.css
+++ b/styles/style.css
@@ -115,6 +115,34 @@ p {
   margin: 30px auto;
 }
 
+.resume {
+  margin: 0 auto;
+  max-width: 1000px;
+}
+
+.resume h2 {
+  font-size: 24px;
+}
+
+.resume a {
+  color: #212529;
+}
+
+.resume .column-one {
+  border-right: 2px solid black;
+}
+
+.resume .column-one ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.resume p {
+  font-size: 16px;
+  line-height: 24px;
+}
+
 .portrait {
   border-radius: 10px;
   max-width: 304px;
