--- a/styles/style.css
+++ b/styles/style.css
@@ -138,6 +138,10 @@ p {
   padding: 0;
 }
 
+.resume .column-two {
+  margin-left: 48px;
+}
+
 .resume p {
   font-size: 16px;
   line-height: 24px;
@@ -358,6 +362,14 @@ footer .social-links a:hover {
 
   .contact-content {
     text-align: center;
+  }
+
+  .resume .column-one {
+    border-right: none;
+  }
+
+  .resume .column-two {
+    margin-left: 0;
   }
 }
 
